--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     />
     <!-- END: Google Font -->
 
-    <title>Contact Apps</title>
+    <title>Notes App</title>
   </head>
   <body>
     <div id="root"></div>
